# ghostcomputeStack

./: .gitignore  .vercelignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  testscript.ts  vercel.json  vite.config.ts
.github/workflows/: ghost-worker-release.yml
apps/ghost-worker/: index.html  package-lock.json  package.json  vite.config.ts
apps/public/: dashboard-x402.bundle.mjs
apps/web/: package.json  vite.config.ts
programs/attestation/: Cargo.toml
programs/dark_pool/: Cargo.toml
programs/fee_collector/: Cargo.toml
programs/fee_collector/src/: lib.rs
programs/worker_registry/: Cargo.toml
programs/worker_registry/src/: lib.rs
public/: ciron.html  dashboard-api.mjs  dashboard-darkpool.mjs  dashboard-x402-200k.mjs  dashboard-x402-wallet.mjs  dashboard-x402.bundle.mjs  dashboard-x402.mjs  dashboard.html  download.html  ghst-metadata.json
scripts/: apply-supabase-migrations.ts  deploy-programs.ts  distribute-fees.ts  example-ghost-openai-client.ts  gpu-tunnel.sh  gpu-worker-setup.sh  launch-ghst-pump.ts  load-env.ts  migrate-chain-events.ts  migrate-x402-settlements.ts  setup-fee-distribution.ts  setup-fee-vault-ata.ts  solana-lib.ts  sync-idls.ts  test-attestation.ts  test-chain-indexer.ts  test-dark-pool-onchain.ts  test-sealed-darkpool-onchain.ts  test-solana-clients.ts  test-worker-registry-onchain.ts  test-x402-client-settlement.ts  test-x402-inference.ts  test-x402-settlement.ts  verify-stack.ts
src/: routeTree.gen.ts  styles.css
src/hooks/: use-siws.ts
worker/: package.json
(+147 files in other folders)
