[workspace]
members = [
    "programs/worker_registry",
    "programs/job_router",
    "programs/dark_pool",
    "programs/ghst_staking",
    "programs/fee_collector",
    "programs/attestation",
    "programs/governance",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
